# pySyncCalendar

./: .gitignore  README.md  main.py  pyproject.toml
